--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-01 13:50+0200\n"
-"PO-Revision-Date: 2022-03-01 13:55+0200\n"
+"PO-Revision-Date: 2022-03-01 13:57+0200\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
 "Language-Team: LANGUAGE <timo.tuominen@kausal.tech>\n"
 "Language: fi\n"
@@ -853,16 +853,13 @@ msgid "Indicators"
 msgstr "Mittarit"
 
 #: actions/models/plan.py
-#, fuzzy
-#| msgid "general administrators"
 msgid "general plan admin"
-msgstr "pääkäyttäjät"
+msgstr "toimenpideohjelman pääkäyttäjä"
 
 #: actions/models/plan.py
 #, fuzzy
-#| msgid "general administrators"
 msgid "general plan admins"
-msgstr "pääkäyttäjät"
+msgstr "toimenpideohjelmien pääkäyttäjät"
 
 #: actions/models/plan.py
 msgid "host name"
